fixed menu - spacing between menu text options, also centered them

--- a/style.css
+++ b/style.css
@@ -54,12 +54,27 @@ body {
     color: #776A00;
 }
 
-div.menubar {
+#menubar {
     background: url("img/menu.png") no-repeat center top;
     background-color: transparent;
     width: 940px;
     height: 69px;
     margin: 0; padding: 0; border: 0;
+}
+
+/* #menubar:after {
+    content: '';    
+    width: 100%;
+    margin: 0; padding: 0; border: 0;
+} */
+
+.menuItem {
+    display: inline-block;
+    width: 150px;
+    height: 50px;
+    vertical-align: middle;
+    line-height: 50px;
+    font-size: 17px;
 }
 
 div.textContent {
@@ -108,10 +123,6 @@ a:link.textLink {
 a:hover.textLink {
     color:#E5CC00;
 } /* mouse over link */
-
-a.menuItem {
-    font-size: 17px;
-}
 
 a:link.menuItem {
     color:#3C3600;
